--- a/src/root/root.scss
+++ b/src/root/root.scss
@@ -30,6 +30,7 @@ a {
 html, body {
   margin: 0;
   color: #333;
+  opacity: 1;
   line-height: 1.15;
   font-size: $font-normal;
   font-family: $default-font-family;
